--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
+    background-color: black;
     margin-top: 75px;
 }
 
@@ -14,6 +14,7 @@ body {
 
 .bold {
     font-weight: bold;
+    font-style : italic;
 }
 
 .img-medium {
