--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: black;
+    background-color: lightgrey;
     margin-top: 75px;
 }
 
@@ -15,6 +15,7 @@ body {
 .bold {
     font-weight: bold;
     font-style : italic;
+    
 }
 
 .img-medium {
