[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -23,9 +23,9 @@ body {
 {
     font-style : italic;
 }
-.underline
+.oblique
 {
-    font-style: underline;
+    font-style: oblique;
 }
 .bold {
     font-weight: bold;
