--- a/ui/style.css
+++ b/ui/style.css
@@ -6,8 +6,11 @@ body {
 
 .center {
     text-align: center;
-    background-color: white;
     
+    
+}
+p{
+    background-color: white;
 }
 .left
 {
